fixed allBooks. Covers on second line wouldn't float left if one cover image was taller by at least 1px. Made all cover images a standard height.

--- a/WebContent/stylesheet.css
+++ b/WebContent/stylesheet.css
@@ -87,7 +87,10 @@ a {
 
 .indent { padding-left: 20px; }
 
-img { padding-left: 20px; }
+img { 
+	padding-left: 20px;
+	height: 193px; 
+}
 
 h4 {
     margin-top: 10px;
